// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"execute" option should work with "Boolean" value: css 1`] = `
"a {
    color: green
}"
`;

exports[`"execute" option should work with "Boolean" value: errors 1`] = `Array []`;

exports[`"execute" option should work with "Boolean" value: warnings 1`] = `Array []`;

exports[`"execute" option should work with "postcss-js" parser: css 1`] = `
"a {
    color: yellow
}"
`;

exports[`"execute" option should work with "postcss-js" parser: errors 1`] = `Array []`;

exports[`"execute" option should work with "postcss-js" parser: warnings 1`] = `Array []`;
